[gd_scene load_steps=5 format=2]

[ext_resource path="res://aset/papan.png" type="Texture" id=1]
[ext_resource path="res://scene2D/script/menu.gd" type="Script" id=2]
[ext_resource path="res://aset/rumput/EndModern.jpg" type="Texture" id=3]
[ext_resource path="res://musik/audio/game off.mp3" type="AudioStream" id=4]

[node name="menu" type="Node2D"]
script = ExtResource( 2 )

[node name="EndModern" type="Sprite" parent="."]
position = Vector2( 514.5, 299 )
scale = Vector2( 1.2449, 1.31183 )
texture = ExtResource( 3 )

[node name="Papan" type="Sprite" parent="."]
visible = false
position = Vector2( 513.75, 300.25 )
scale = Vector2( 1.77863, 1.88154 )
texture = ExtResource( 1 )

[node name="menu" type="VBoxContainer" parent="."]
anchor_right = 0.327
anchor_bottom = 0.891
margin_left = 805.0
margin_top = 489.0
margin_right = 906.0
margin_bottom = 536.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lanjut_gmModern" type="Button" parent="menu"]
margin_right = 101.0
margin_bottom = 20.0
text = "NEXT"

[node name="keluar_gmModern" type="Button" parent="menu"]
margin_top = 24.0
margin_right = 101.0
margin_bottom = 44.0
text = "KELUAR"

[node name="judul2" type="Label" parent="."]
margin_left = 569.0
margin_top = 157.0
margin_right = 804.0
margin_bottom = 205.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Yahh .... mata kamu jadi sakit 
akibat kebanyakan main gadget."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Musik" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
autoplay = true

[connection signal="pressed" from="menu/lanjut_gmModern" to="." method="_on_lanjut_gmModern_pressed"]
[connection signal="pressed" from="menu/keluar_gmModern" to="." method="_on_keluar_gmModern_pressed"]
