[gd_scene load_steps=8 format=2]

[ext_resource path="res://aset/rumput/menu2.jpg" type="Texture" id=1]
[ext_resource path="res://scene2D/script/menu.gd" type="Script" id=2]
[ext_resource path="res://aset/rumput/menu_bg.jpg" type="Texture" id=3]
[ext_resource path="res://aset/rumput/mainps.png" type="Texture" id=4]
[ext_resource path="res://aset/rumput/gbsodor.png" type="Texture" id=5]
[ext_resource path="res://aset/player1.png" type="Texture" id=6]
[ext_resource path="res://musik/New/ByeByeBrain320bit.mp3" type="AudioStream" id=7]

[node name="menu" type="Node2D"]
script = ExtResource( 2 )

[node name="MenuBg" type="Sprite" parent="."]
position = Vector2( 511, 301.75 )
scale = Vector2( 0.540104, 0.5625 )
texture = ExtResource( 3 )

[node name="Mainps" type="Sprite" parent="MenuBg"]
position = Vector2( 664.687, 311.556 )
scale = Vector2( 0.770637, 0.905766 )
texture = ExtResource( 4 )

[node name="Gbsodor" type="Sprite" parent="MenuBg"]
position = Vector2( -662.835, 293.778 )
scale = Vector2( 1.11449, 1.14879 )
texture = ExtResource( 5 )

[node name="Menu2" type="Sprite" parent="."]
visible = false
position = Vector2( 511.5, 303 )
scale = Vector2( 0.767936, 0.809896 )
texture = ExtResource( 1 )

[node name="menu" type="VBoxContainer" parent="."]
anchor_right = 0.327
anchor_bottom = 0.891
margin_left = 409.0
margin_top = 214.0
margin_right = 510.0
margin_bottom = 282.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="game_utama" type="Button" parent="menu"]
margin_right = 101.0
margin_bottom = 20.0
text = "GAME UTAMA"

[node name="kembali" type="Button" parent="menu"]
margin_top = 24.0
margin_right = 101.0
margin_bottom = 44.0
text = "KEMBALI"

[node name="keluar" type="Button" parent="menu"]
margin_top = 48.0
margin_right = 101.0
margin_bottom = 68.0
text = "KELUAR"

[node name="judul" type="Label" parent="."]
margin_left = 147.0
margin_top = 128.0
margin_right = 470.0
margin_bottom = 142.0
rect_scale = Vector2( 2.3, 2.3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "SILAHKAN PILIH SALAH SATU MENU DIBAWAH INI"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="Sprite" parent="."]
position = Vector2( 513, 507 )
scale = Vector2( 0.508475, 0.518605 )
texture = ExtResource( 6 )

[node name="bgm" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
autoplay = true
attenuation = 0.241484

[connection signal="pressed" from="menu/game_utama" to="." method="_on_game_utama_pressed"]
[connection signal="pressed" from="menu/kembali" to="." method="_on_kembali_pressed"]
[connection signal="pressed" from="menu/keluar" to="." method="_on_keluar_pressed"]
